Solved all the Exercises