@@ -9,9 +9,9 @@ public class Main {
         sys.addToMenu(new MenuItem("C1", "Coffee", 30.00));
         sys.addToMenu(new MenuItem("S1", "Sandwich", 60.00));
 
-        List<OrderLine> order = List.of(
-                new OrderLine("M1", 2),
-                new OrderLine("C1", 1)
+        List<OrderLine> order = Arrays.asList(
+            new OrderLine("M1", 2),
+            new OrderLine("C1", 1)
         );
 
         sys.checkout("student", order);
